@@ -12,9 +12,6 @@
 
 #include <fost/http.authentication.fost.hpp>
 
-#include <boost/lambda/lambda.hpp>
-#include <boost/lambda/bind.hpp>
-
 
 using namespace fostlib;
 
@@ -85,12 +82,9 @@ void fostlib::http::fost_authentication(
     const std::set< fostlib::string > &tosign
 ) {
     ua.authentication(
-        boost::function<
-            void ( fostlib::http::user_agent::request& )
-        >(boost::lambda::bind(
-            do_authn, api_key, secret, tosign, boost::lambda::_1
-        ))
-    );
+        [api_key, secret, tosign](fostlib::http::user_agent::request &req) {
+            do_authn(api_key, secret, tosign, req);
+        });
 }
 
 
@@ -104,7 +98,7 @@ fostlib::http::fost_authn::fost_authn(
 
 
 fostlib::http::fost_authn fostlib::http::fost_authentication(
-    boost::function< nullable< string > ( string ) > key_mapping,
+    std::function<nullable<string>(string)> key_mapping,
     server::request &request
 ) {
     if ( !request.data()->headers().exists("Authorization") )
@@ -178,19 +172,16 @@ fostlib::http::fost_authn fostlib::http::fost_authentication(
         }
     }
 }
-namespace {
-    nullable<string> lookup(
-        const std::map<string, string> &keys, const string &key
-    ) {
-        std::map<string, string>::const_iterator p = keys.find(key);
-        if ( p == keys.end() )
-            return null;
-        else
-            return p->second;
-    }
-}
 fostlib::http::fost_authn fostlib::http::fost_authentication(
-    const std::map< string, string > &keys, fostlib::http::server::request &request
+    const std::map<string, string> &keys, fostlib::http::server::request &request
 ) {
-    return fost_authentication(boost::lambda::bind(lookup, keys, boost::lambda::_1), request);
+    auto lookup = [&keys](const string &key) -> nullable<string> {
+            const auto p = keys.find(key);
+            if ( p == keys.end() )
+                return null;
+            else
+                return p->second;
+        };
+    return fost_authentication(lookup, request);
 }
+
