@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -45,19 +45,21 @@ namespace fostlib {
             accessors<const bool> under_attack;
             /// The set of headers that were properly signed as part of the request
             boost::shared_ptr<const mime::mime_headers> signed_headers;
-            private:
-                fost_authn(const string &, bool under_attack = false);
-                fost_authn(boost::shared_ptr<const mime::mime_headers>);
-                friend FOST_INET_DECLSPEC fost_authn fost_authentication(
-                        boost::function< nullable<string>(string) >, server::request &);
-                friend FOST_INET_DECLSPEC fost_authn fost_authentication(
-                        const std::map< string, string > &, server::request &);
+        private:
+            fost_authn(const string &, bool under_attack = false);
+            fost_authn(boost::shared_ptr<const mime::mime_headers>);
+            friend FOST_INET_DECLSPEC fost_authn fost_authentication(
+                    std::function< nullable<string>(string) >, server::request &);
+            friend FOST_INET_DECLSPEC fost_authn fost_authentication(
+                    const std::map< string, string > &, server::request &);
         };
-        /// Returns whether or not an HTTP server request is properly signed, and if it is, which headers are signed
+        /// Returns whether or not an HTTP server request is properly signed,
+        /// and if it is, which headers are signed
         FOST_INET_DECLSPEC
         fost_authn fost_authentication(
-            boost::function< nullable< string > ( string ) > key_mapping, server::request &request);
-        /// Returns whether or not an HTTP server request is properly signed, and if it is, which headers are signed
+            std::function< nullable< string > ( string ) > key_mapping, server::request &request);
+        /// Returns whether or not an HTTP server request is properly signed,
+        /// and if it is, which headers are signed
         FOST_INET_DECLSPEC
         fost_authn fost_authentication(
             const std::map< string, string > &key_mapping, server::request &request);
