@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -31,9 +31,7 @@ namespace fostlib {
             class response;
 
             /// A function that will authenticate the request
-            accessors< nullable<
-                boost::function< void ( request & ) >
-            > > authentication;
+            accessors<std::function<void(request &)>> authentication;
             /// The base URL used for new requests
             accessors< url > base;
 
