@@ -1,3 +1,6 @@
+2016-11-26  Kirit Saelensminde  <kirit@felspar.com>
+ Replace older Boost code with `std::function` and lambdas.
+
 2016-09-18  Kirit Saelensminde  <kirit@felspar.com>
  Make the remote address properly available on the server HTTP request.
 
